<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Android Examples</string>
    <string name="action_settings">Settings</string>

    <string name="list_view_example">List View Example</string>
    <string name="recycler_view_example">Recycler Example</string>
    <string name="card_view_example">Card View Example</string>
    <string name="custom_view_example">Custom View Example</string>
    <string name="data_binding_example">Data Binding Example</string>
    <string name="model_view_presenter_example">Model View Presenter Example</string>
    <string name="movable_activity_example">Movable Example</string>

    <!-- Data Binding Strings -->


</resources>
